<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="sign_in_google">Login with Google</string>
    <string name="sign_in_facebook">Login with Facebook</string>
    <string name="client_id_google">770258625538-kjca2s5damch1of190puatlmub7uuet5.apps.googleusercontent.com</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">312200446079297</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb312200446079297</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="error_no_internet">Error no Internet</string>
    <string name="error_unknown_error">Unknown error</string>

    <!-- NAVIGATION MENUS -->
    <string name="search">Search</string>

    <string name="title_map">Map view</string>
    <string name="title_list">List view</string>
    <string name="title_users">Workmates</string>

    <string name="phone">PHONE</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="workmates">Workmates</string>
    <string name="photo_url">https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&amp;photoreference=</string>
    <string name="hungry">I\'m hungry!</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="search_title">search title</string>
    <string name="search_hint">Search restaurant</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="no_result">No result</string>
    <string name="channel_name">go lunch</string>
    <string name="channel_description">get info restaurant</string>
    <string name="notification_title">It\'s time for lunch!</string>
    <string name="default_notification_channel_id">default</string>

    <string name="logo">logo</string>
    <string name="photo_restaurant">photo restaurant</string>
    <string name="star">star</string>

    <!--DRAWER-->
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="chat">CHAT</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">LOG OUT</string>

    <!--CHAT-->
    <string name="img_description_photo">photo</string>
    <string name="img_description_add_file_button">Add file button</string>
    <string name="write_your_message_here">Write your message here…</string>
    <string name="send_button">Send</string>
    <string name="profile_image">profile_image</string>
    <string name="img_description_cardview">cardview image</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="chat_error">chat error</string>
    <string name="popup_title_permission_files_access">popup_title_permission_files_access</string>
    <string name="toast_title_no_image_chosen">No image chosen</string>
    <string name="no_messages">No messages</string>

    <!--RESTAURANT-->
    <string name="is_eating_at">\u0020is eating at\u0020</string>
    <string name="is_joining">\u0020is joining!</string>
    <string name="hasn_not_decided">\u0020hasn\'t decided yet</string>
    <string name="drawer_lunch">You haven\'t chosen any restaurant yet!</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="you_are_going">Your are going to:</string>
    <string name="with_workmates">\u0020With your workmates:\u0020</string>
    <string name="closing_soon">Closing soon</string>
    <string name="opens_at">Opens at\u0020</string>
    <string name="open_until">Open until\u0020</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>

    <!-- SETTINGS-->
    <string name="delete_user">Delete user</string>
    <string name="delete_user_in_settings">Are you sure you want to delete this user?</string>
    <string name="delete_user_dialog">Delete user</string>
    <string name="successfully_deleted">Successfully deleted user</string>
    <string name="error_deleting_user">Error deleting user:\u0020</string>
    <string name="username_updated">Username updated\u0020</string>
    <string name="error_updating_username">Error updating username:\u0020</string>
    <string name="error_create">Error creating user\u0020</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="user">user</string>
    <string name="no_phone_number">No phone number</string>
    <string name="no_website">No website</string>
    <string name="update_username">Update username</string>

</resources>