<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_lunch"
            android:icon="@drawable/ic_action_lunch"
            android:orderInCategory="100"
            android:title="@string/your_lunch" />
        <item
            android:id="@+id/action_chat"
            android:icon="@drawable/ic_chat"
            android:orderInCategory="100"
            android:title="@string/chat"/>
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:orderInCategory="100"
            android:title="@string/settings" />
        <item
            android:id="@+id/action_signout"
            android:icon="@drawable/ic_action_signout"
            android:orderInCategory="100"
            android:title="@string/log_out" />
    </group>

</menu>