<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.ChatActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/chat_add_message_container"
        android:layout_below="@id/appbar"
        android:orientation="vertical">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:text="@string/no_messages"
            android:textAlignment="center" />

        <!-- RECYCLER VIEW -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_above="@id/chat_add_message_container"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/img_description_photo" />

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/activity_chat_add_file_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_description_add_file_button"
            android:src="@drawable/ic_add_circle_black" />

        <!-- TEXT MESSAGE EDIT TEXT -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/write_your_message_here"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_textsize" />

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button" />

    </LinearLayout>

</RelativeLayout>