<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin">

    <!-- PROFILE CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_item_profile_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- IMAGE VIEW PROFILE -->
        <ImageView
            android:id="@+id/chat_item_profile_container_profile_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            app:srcCompat="@drawable/ic_star"
            android:contentDescription="@string/profile_image" />

        <!-- IMAGE IS COLLEGE -->
        <ImageView
            android:id="@+id/chat_item_profile_container_is_college_image"
            android:layout_width="15dip"
            android:layout_height="15dip"
            app:srcCompat="@drawable/ic_search"
            android:contentDescription="@string/search" />

    </LinearLayout>

    <!-- MESSAGE CONTAINER -->
    <RelativeLayout
        android:id="@+id/chat_item_message_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <!-- IMAGE SENT CONTAINER -->
        <android.support.v7.widget.CardView
            android:id="@+id/chat_item_message_container_image_sent_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <!-- IMAGE SENT -->
            <ImageView
                android:id="@+id/chat_item_message_container_image_sent_cardview_image"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:scaleType="centerCrop"
                android:contentDescription="@string/img_description_cardview" />

        </android.support.v7.widget.CardView>

        <!-- TEXT MESSAGE CONTAINER -->
        <LinearLayout
            android:id="@+id/chat_item_message_container_text_message_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_below="@id/chat_item_message_container_image_sent_cardview"
            android:background="@drawable/rounded_corners"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <!-- TEXT MESSAGE -->
                <TextView
                    android:id="@+id/chat_item_message_container_text_message_container_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_textsize"
                    tools:text="Text example" />

            </LinearLayout>

        </LinearLayout>

        <!-- DATE MESSAGE -->
        <TextView
            android:id="@+id/activity_chat_item_message_container_text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_item_message_container_text_message_container"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@id/chat_item_message_container_text_message_container"
            android:textStyle="bold"
            android:textSize="@dimen/default_textsize_mini" />

    </RelativeLayout>





</RelativeLayout>