<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distance"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/user"
                    android:src="@drawable/ic_user"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/number_users"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star_one"
                    android:layout_width="15dp"
                    android:layout_height="15sp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/ic_star"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/star_two"
                    android:layout_width="15dp"
                    android:layout_height="15sp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/ic_star"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/star_three"
                    android:layout_width="15dp"
                    android:layout_height="15sp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/ic_star"
                    android:visibility="invisible" />

            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_restaurant"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />


</LinearLayout>